# BugLife

./: Board.cpp  Board.h  Bug.cpp  Bug.h  CMakeLists.txt  Crawler.cpp  Crawler.h  Creeper.cpp  Creeper.h  Hopper.cpp  Hopper.h  Super.cpp  Super.h  bugs.txt  bugs_life_history_Apr-27_19-52.txt  bugs_life_history_Apr-27_20-24.txt  bugs_life_history_Apr-27_22-17.txt  bugs_life_history_Apr-27_22-19.txt  bugs_life_history_Apr-27_22-33.txt  bugs_life_history_Apr-27_22-40.txt  bugs_life_history_Apr-27_22-43.txt  bugs_life_history_Apr-27_22-44.txt  main.cpp
